--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,5 +29,11 @@
 	"\"page\" is required": "\"page\" is required",
 	"Invalid value { title": " 'Footwear' }",
 	"": "",
-	"Already Exist": "Already Exist"
+	"Already Exist": "Already Exist",
+	"column \"nan\" does not exist": "column \"nan\" does not exist",
+	"Variant is associated to Product using an alias. You must use the 'as' keyword to specify the alias within your include statement.": "Variant is associated to Product using an alias. You must use the 'as' keyword to specify the alias within your include statement.",
+	"VariantProduct is not associated to Product!": "VariantProduct is not associated to Product!",
+	"User is not associated to Product!": "User is not associated to Product!",
+	"Invalid value { productId": " '9b120979-d9ff-4e08-8416-2969a66cb314' }",
+	"column \"ProductId\" does not exist": "column \"ProductId\" does not exist"
 }
